# esp32_scopeclock

./: .gitmodules  Cargo.toml  LICENSE  Notes.txt  README.md
.cargo/: config.toml
doc/: .gitattributes
src/: analog_clock_face.rs  font.rs  high_level.S  httptest.rs  main.rs  mqtt.rs  ntptime.rs  picture.rs  scopeclock.rs
tool/: Cargo.toml
tool/src/: main.rs
