
[package]
name = "scopeclock"
version = "0.1.0"
authors = ["Andre Zeps <andre.zeps@googlemail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section    = "1.1.2"

esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-alloc           = "0.3.0"

esp-hal = { version="0.16.1", features = [
    "esp32", "embassy", "embassy-time-timg0", "embassy-executor-thread", "embassy-executor-interrupt", "async", "embedded-hal-02" ] }
esp-println = { version = "0.9.0", features = ["esp32","uart", "colors"], default-features = false }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embedded-io = { version = "0.6.1", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.6.0" }
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = [
    "nightly",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0" }
static_cell = { version = "2.0", features = ["nightly"] }
heapless = { version = "0.8", default-features = false, features = [
    "portable-atomic",
] }
cfg-if              = "1.0.0"
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev="b18ed4a4f18dddc8ffe6f9c7e426a270c010024a",  features = ["esp32", "wifi", "utils", "tcp", "dhcpv4", "embassy-net"] }
esp-wifi-sys = { git = "https://github.com/esp-rs/esp-wifi.git", rev="b18ed4a4f18dddc8ffe6f9c7e426a270c010024a" }

libm = "0.2.8"
bresenham = "0.1.1"
embassy-net-driver = "0.2.0"
rust-mqtt = { git = "https://github.com/obabec/rust-mqtt.git", default-features = false }
sntpc = { git = "https://github.com/slamy/sntpc.git", default-features = false , features = ["async"] }
chrono = { version = "0.4.37", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.9.0", default-features = false }
embassy-futures = "0.1.1"

[patch.crates-io]
esp-hal = { path = "extern/esp-hal/esp-hal" }
#xtensa-lx = { path = "extern/xtensa-lx/xtensa-lx" }
#xtensa-lx-rt = { path = "extern/xtensa-lx/xtensa-lx-rt" }
#core-isa-parser = { path = "extern/xtensa-lx/core-isa-parser" }


[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"


[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

